package Iterator_pattern.CE1;

public abstract class Aggregate {
    public abstract MyIterator createIterator();

}
