package Iterator_pattern.CE1;

public interface MyIterator {
    Object fist();
    Object next();
    boolean inDone();
    Object currentItem();
}
